# django-playground

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  all_data.json  arquivo.csv  compose.yaml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: main.yml
playground/: settings.py  urls.py
products/: admin.py  api.py  models.py  tasks.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_category_productdetail.py  0003_alter_category_options_alter_productdetail_category_and_more.py  0004_alter_productdetail_category.py
products/templates/products/: product_detail.html  product_list.html  product_track.html  upload_csv.html
templates/admin/products/product/: change_form.html  confirm_make_available.html
